--- a/css/doc-explorer.css
+++ b/css/doc-explorer.css
@@ -1,7 +1,6 @@
 .graphiql-container .doc-explorer {
   background: white;
 }
-
 .graphiql-container .doc-explorer-title-bar {
   cursor: default;
   display: flex;
@@ -11,7 +10,6 @@
   position: relative;
   user-select: none;
 }
-
 .graphiql-container .doc-explorer-title {
   flex: 1;
   font-weight: bold;
@@ -21,7 +19,6 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-
 .graphiql-container .doc-explorer-back {
   color: #3B5998;
   cursor: pointer;
@@ -31,11 +28,9 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-
 .doc-explorer-narrow .doc-explorer-back {
   width: 0;
 }
-
 .graphiql-container .doc-explorer-back:before {
   border-left: 2px solid #3B5998;
   border-top: 2px solid #3B5998;
@@ -47,11 +42,9 @@
   transform: rotate(-45deg);
   width: 9px;
 }
-
 .graphiql-container .doc-explorer-rhs {
   position: relative;
 }
-
 .graphiql-container .doc-explorer-contents {
   background-color: #ffffff;
   border-top: 1px solid #d6d6d6;
@@ -64,29 +57,26 @@
   right: 0;
   top: 47px;
 }
-
-.graphiql-container .doc-type-description p:first-child ,
+.graphiql-container .doc-type-description p:first-child,
 .graphiql-container .doc-type-description blockquote:first-child {
   margin-top: 0;
 }
-
 .graphiql-container .doc-explorer-contents a {
   cursor: pointer;
   text-decoration: none;
 }
-
 .graphiql-container .doc-explorer-contents a:hover {
   text-decoration: underline;
 }
-
-.graphiql-container .doc-value-description {
-  padding: 4px 0 8px 12px;
+.graphiql-container .doc-value-description > :first-child {
+  margin-top: 4px;
 }
-
+.graphiql-container .doc-value-description > :last-child {
+  margin-bottom: 4px;
+}
 .graphiql-container .doc-category {
   margin: 20px 0;
 }
-
 .graphiql-container .doc-category-title {
   border-bottom: 1px solid #e0e0e0;
   color: #777;
@@ -99,67 +89,124 @@
   padding: 10px 0;
   user-select: none;
 }
-
 .graphiql-container .doc-category-item {
   margin: 12px 0;
   color: #555;
 }
-
 .graphiql-container .keyword {
   color: #B11A04;
 }
-
 .graphiql-container .type-name {
   color: #CA9800;
 }
-
 .graphiql-container .field-name {
   color: #1F61A0;
 }
-
-.graphiql-container .value-name {
+.graphiql-container .enum-value {
   color: #0B7FC7;
 }
-
 .graphiql-container .arg-name {
   color: #8B2BB9;
 }
-
-.graphiql-container .arg:after {
+.graphiql-container .arg {
+  display: block;
+  margin-left: 1em;
+}
+.graphiql-container .arg:first-child:last-child,
+.graphiql-container .arg:first-child:nth-last-child(2),
+.graphiql-container .arg:first-child:nth-last-child(2) ~ .arg {
+  display: inherit;
+  margin: inherit;
+}
+.graphiql-container .arg:first-child:nth-last-child(2):after {
   content: ', ';
 }
-
-.graphiql-container .arg:last-child:after {
-  content: '';
+.graphiql-container .arg-default-value {
+  color: #0B7FC7;
 }
-
-.graphiql-container .doc-alert-text {
-  color: #F00F00;
-  font-family: 'Consolas', 'Inconsolata', 'Droid Sans Mono', 'Monaco', monospace;
-  font-size: 13px;
+.graphiql-container .doc-deprecation {
+  background: #fffae8;
+  box-shadow: inset 0 0 1px #bfb063;
+  color: #867F70;
+  line-height: 16px;
+  margin: 8px -8px;
+  max-height: 80px;
+  overflow: hidden;
+  padding: 8px;
+  border-radius: 3px;
 }
-
-.graphiql-container .search-box-outer {
-  border: 1px solid #d3d6db;
+.graphiql-container .doc-deprecation:before {
+  content: 'Deprecated:';
+  color: #c79b2e;
+  cursor: default;
+  display: block;
+  font-size: 9px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  line-height: 1;
+  padding-bottom: 5px;
+  text-transform: uppercase;
+  user-select: none;
+}
+.graphiql-container .doc-deprecation > :first-child {
+  margin-top: 0;
+}
+.graphiql-container .doc-deprecation > :last-child {
+  margin-bottom: 0;
+}
+.graphiql-container .show-btn {
+  -webkit-appearance: initial;
+  display: block;
+  border-radius: 3px;
+  border: solid 1px #ccc;
+  text-align: center;
+  padding: 8px 12px 10px;
+  width: 100%;
   box-sizing: border-box;
-  display: inline-block;
-  font-size: 12px;
-  height: 24px;
-  margin-bottom: 12px;
-  padding: 3px 8px 5px;
-  vertical-align: middle;
+  background: #fbfcfc;
+  color: #555;
+  cursor: pointer;
+}
+.graphiql-container .search-box {
+  border-bottom: 1px solid #d3d6db;
+  display: block;
+  font-size: 14px;
+  margin: -15px -15px 12px 0;
+  position: relative;
+}
+.graphiql-container .search-box:before {
+  content: '\26b2';
+  cursor: pointer;
+  display: block;
+  font-size: 24px;
+  position: absolute;
+  top: -2px;
+  transform: rotate(-45deg);
+  user-select: none;
+}
+.graphiql-container .search-box .search-box-clear {
+  background-color: #d0d0d0;
+  border-radius: 12px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 11px;
+  padding: 1px 5px 2px;
+  position: absolute;
+  right: 3px;
+  top: 8px;
+  user-select: none;
+}
+.graphiql-container .search-box .search-box-clear:hover {
+  background-color: #b9b9b9;
+}
+.graphiql-container .search-box > input {
+  border: none;
+  box-sizing: border-box;
+  font-size: 14px;
+  outline: none;
+  padding: 6px 24px 8px 20px;
   width: 100%;
 }
-
-.graphiql-container .search-box-input {
-  border: 0;
-  font-size: 12px;
-  margin: 0;
-  outline: 0;
-  padding: 0;
-  width: 100%;
-}
-
 .graphiql-container .error-container {
   font-weight: bold;
   left: 0;
