--- a/css/doc-explorer.css
+++ b/css/doc-explorer.css
@@ -1,16 +1,25 @@
 .graphiql-container .doc-explorer {
   background: white;
 }
+
 .graphiql-container .doc-explorer-title-bar {
   cursor: default;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   height: 34px;
   line-height: 14px;
   padding: 8px 8px 5px;
   position: relative;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
+
 .graphiql-container .doc-explorer-title {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
   flex: 1;
   font-weight: bold;
   overflow-x: hidden;
@@ -19,6 +28,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
 .graphiql-container .doc-explorer-back {
   color: #3B5998;
   cursor: pointer;
@@ -28,9 +38,11 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
 .doc-explorer-narrow .doc-explorer-back {
   width: 0;
 }
+
 .graphiql-container .doc-explorer-back:before {
   border-left: 2px solid #3B5998;
   border-top: 2px solid #3B5998;
@@ -39,12 +51,15 @@
   height: 9px;
   margin: 0 3px -1px 0;
   position: relative;
+  -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
   width: 9px;
 }
+
 .graphiql-container .doc-explorer-rhs {
   position: relative;
 }
+
 .graphiql-container .doc-explorer-contents {
   background-color: #ffffff;
   border-top: 1px solid #d6d6d6;
@@ -57,26 +72,33 @@
   right: 0;
   top: 47px;
 }
-.graphiql-container .doc-type-description p:first-child,
+
+.graphiql-container .doc-type-description p:first-child ,
 .graphiql-container .doc-type-description blockquote:first-child {
   margin-top: 0;
 }
+
 .graphiql-container .doc-explorer-contents a {
   cursor: pointer;
   text-decoration: none;
 }
+
 .graphiql-container .doc-explorer-contents a:hover {
   text-decoration: underline;
 }
+
 .graphiql-container .doc-value-description > :first-child {
   margin-top: 4px;
 }
+
 .graphiql-container .doc-value-description > :last-child {
   margin-bottom: 4px;
 }
+
 .graphiql-container .doc-category {
   margin: 20px 0;
 }
+
 .graphiql-container .doc-category-title {
   border-bottom: 1px solid #e0e0e0;
   color: #777;
@@ -87,43 +109,57 @@
   letter-spacing: 1px;
   margin: 0 -15px 10px 0;
   padding: 10px 0;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
+
 .graphiql-container .doc-category-item {
   margin: 12px 0;
   color: #555;
 }
+
 .graphiql-container .keyword {
   color: #B11A04;
 }
+
 .graphiql-container .type-name {
   color: #CA9800;
 }
+
 .graphiql-container .field-name {
   color: #1F61A0;
 }
+
 .graphiql-container .enum-value {
   color: #0B7FC7;
 }
+
 .graphiql-container .arg-name {
   color: #8B2BB9;
 }
+
 .graphiql-container .arg {
   display: block;
   margin-left: 1em;
 }
+
 .graphiql-container .arg:first-child:last-child,
 .graphiql-container .arg:first-child:nth-last-child(2),
 .graphiql-container .arg:first-child:nth-last-child(2) ~ .arg {
   display: inherit;
   margin: inherit;
 }
+
 .graphiql-container .arg:first-child:nth-last-child(2):after {
   content: ', ';
 }
+
 .graphiql-container .arg-default-value {
   color: #0B7FC7;
 }
+
 .graphiql-container .doc-deprecation {
   background: #fffae8;
   box-shadow: inset 0 0 1px #bfb063;
@@ -135,6 +171,7 @@
   padding: 8px;
   border-radius: 3px;
 }
+
 .graphiql-container .doc-deprecation:before {
   content: 'Deprecated:';
   color: #c79b2e;
@@ -146,14 +183,20 @@
   line-height: 1;
   padding-bottom: 5px;
   text-transform: uppercase;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
+
 .graphiql-container .doc-deprecation > :first-child {
   margin-top: 0;
 }
+
 .graphiql-container .doc-deprecation > :last-child {
   margin-bottom: 0;
 }
+
 .graphiql-container .show-btn {
   -webkit-appearance: initial;
   display: block;
@@ -167,6 +210,7 @@
   color: #555;
   cursor: pointer;
 }
+
 .graphiql-container .search-box {
   border-bottom: 1px solid #d3d6db;
   display: block;
@@ -174,6 +218,7 @@
   margin: -15px -15px 12px 0;
   position: relative;
 }
+
 .graphiql-container .search-box:before {
   content: '\26b2';
   cursor: pointer;
@@ -181,9 +226,14 @@
   font-size: 24px;
   position: absolute;
   top: -2px;
+  -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
+
 .graphiql-container .search-box .search-box-clear {
   background-color: #d0d0d0;
   border-radius: 12px;
@@ -194,11 +244,16 @@
   position: absolute;
   right: 3px;
   top: 8px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
+
 .graphiql-container .search-box .search-box-clear:hover {
   background-color: #b9b9b9;
 }
+
 .graphiql-container .search-box > input {
   border: none;
   box-sizing: border-box;
@@ -207,6 +262,7 @@
   padding: 6px 24px 8px 20px;
   width: 100%;
 }
+
 .graphiql-container .error-container {
   font-weight: bold;
   left: 0;
@@ -217,5 +273,6 @@
   text-align: center;
   text-transform: uppercase;
   top: 50%;
+  -webkit-transform: translate(0, -50%);
   transform: translate(0, -50%);
 }
