--- a/components/GeocoderModal/styles.css
+++ b/components/GeocoderModal/styles.css
@@ -1,4 +1,12 @@
-.geocoder-modal {
+.geocoder-modal-overlay{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 20;
+}
+.geocoder-modal{
     background: white;
     border: 4px solid #d1d3d3;
     border-radius: 4px;
@@ -8,7 +16,7 @@
     min-width: 500px;
     left: 25vw;
     top: 100px;
-    z-index: 10;
+    z-index: 30;
 }
 
 .geocoder-modal__close-button {
