--- a/src/darktheme.css
+++ b/src/darktheme.css
@@ -1,20 +1,70 @@
-/* GraphiQL One Dark Alt (Dark Mode) theme by Ben Keating[1], with some alterations
-* https://gist.github.com/bkeating/cfe0d5e72bd3f9f1f77e1a2ff2309972
-*
-*/
+/* GraphiQL One Dark Alt (Dark Mode) theme by Ben Keating, with some alterations
+ * https://gist.github.com/bkeating/cfe0d5e72bd3f9f1f77e1a2ff2309972
+ */
 
+/* CodeMirror Dark Theme */
 .CodeMirror {
   background: #282d34 !important;
+  color: #abb2bf !important;
 }
 
 .CodeMirror div.CodeMirror-cursor {
   border-color: white;
 }
 
+.CodeMirror-gutters {
+  background: #21262b !important;
+  border-right: 1px solid #181a1f !important;
+}
+
+.CodeMirror-linenumber {
+  color: #5c6370 !important;
+}
+
+/* Fix comment colors - make them more visible */
+.cm-comment {
+  color: #7f848e !important;
+}
+
+/* Scrollbars */
+.CodeMirror-scrollbar-filler,
+.CodeMirror-gutter-filler {
+  background-color: #21262b !important;
+}
+
+.CodeMirror-scroll::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+.CodeMirror-scroll::-webkit-scrollbar-track {
+  background: #21262b;
+}
+
+.CodeMirror-scroll::-webkit-scrollbar-thumb {
+  background: #4a5058;
+  border-radius: 6px;
+}
+
+.CodeMirror-scroll::-webkit-scrollbar-thumb:hover {
+  background: #5a6068;
+}
+
+.CodeMirror-scroll::-webkit-scrollbar-corner {
+  background: #21262b;
+}
+
+/* GraphiQL Container Dark Theme */
+.graphiql-container {
+  background: #21262b !important;
+  color: #cacdd3 !important;
+}
+
 .graphiql-container .doc-explorer-contents,
 .graphiql-container .history-contents {
   background-color: #21262b;
   border-top: 1px solid #181a1f;
+  color: #cacdd3;
 }
 
 .graphiql-container .toolbar-button {
@@ -24,6 +74,11 @@
   border: 1px solid #181a1f !important;
 }
 
+.graphiql-container .toolbar-button:hover {
+  background: #2c3135 !important;
+  color: #cacdd3 !important;
+}
+
 .graphiql-container .result-window .CodeMirror-gutters {
   background: #21262b;
   border-right: 1px solid #181a1f !important;
@@ -31,13 +86,41 @@
 
 .graphiql-container .resultWrap {
   border-left: solid 1px #181a1f;
+  background: #21262b;
 }
 
+/* Fix pane dividers - make them dark */
+.graphiql-container .queryWrap {
+  border-right: 1px solid #181a1f !important;
+}
+
+.graphiql-container .editorWrap {
+  border-top: 1px solid #181a1f !important;
+}
+
+.graphiql-container .variable-editor {
+  border-top: 1px solid #181a1f !important;
+}
+
+/* Fix query variables and request headers tab selection */
 .graphiql-container .variable-editor-title {
-  background: #21262b;
-  border-bottom: 1px solid #181a1f;
-  border-top: 1px solid #181a1f;
-  color: #cacdd3;
+  background: #21262b !important;
+  border-bottom: 1px solid #181a1f !important;
+  border-top: 1px solid #181a1f !important;
+  color: #cacdd3 !important;
+}
+
+.graphiql-container .variable-editor-title-text {
+  color: #888 !important;
+  background: #1a1f25 !important;
+  padding: 8px 12px;
+  border: 1px solid #181a1f !important;
+}
+
+.graphiql-container .variable-editor-title-text.active {
+  color: #cacdd3 !important;
+  background: #21262b !important;
+  border-bottom: 2px solid #007acc !important;
 }
 
 .graphiql-container .topBar {
@@ -69,6 +152,7 @@
 .graphiql-container .docExplorerWrap,
 .graphiql-container .historyPaneWrap {
   box-shadow: none;
+  background: #21262b;
 }
 
 .graphiql-container .docExplorerShow {
@@ -91,132 +175,74 @@
   margin: auto auto 10px auto;
   border: none;
 }
+
 .graphiql-container .search-box input {
   background: #1e2127;
   padding-left: 28px;
+  color: #cacdd3;
+  border: 1px solid #181a1f;
 }
 
 .graphiql-container .search-box:before {
   color: #c1c4ca;
   font-size: 21px;
-  left: 8px;
 }
 
-.graphiql-container,
-.graphiql-container button,
-.graphiql-container input,
-.graphiql-container select {
-  color: #9299a7;
-  background-color: #21262b;
+/* Global scrollbars for dark theme */
+.graphiql-container ::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
 }
 
-.CodeMirror-gutters {
-  border: none !important;
-  background-color: #282d33;
-}
-
-.graphiql-container .execute-button {
-  background: #21262b;
-  border: 1px solid rgb(91, 98, 107);
-  box-shadow: none !important;
-  fill: #c9ccd2;
-}
-
-.graphiql-container .history-contents p {
-  border: none;
-}
-
-.graphiql-container .historyPaneWrap {
+.graphiql-container ::-webkit-scrollbar-track {
   background: #21262b;
 }
 
-.graphiql-container .execute-options > li.selected,
-.graphiql-container .toolbar-menu-items > li.hover,
-.graphiql-container .toolbar-menu-items > li:active,
-.graphiql-container .toolbar-menu-items > li:hover,
-.graphiql-container .toolbar-select-options > li.hover,
-.graphiql-container .toolbar-select-options > li:active,
-.graphiql-container .toolbar-select-options > li:hover,
-.graphiql-container .history-contents > p:hover,
-.graphiql-container .history-contents > p:active {
-  background: #383c41;
+.graphiql-container ::-webkit-scrollbar-thumb {
+  background: #4a5058;
+  border-radius: 6px;
 }
 
-.graphiql-container .toolbar-menu-items > li {
-  color: #383c41;
+.graphiql-container ::-webkit-scrollbar-thumb:hover {
+  background: #5a6068;
 }
 
-.graphiql-container .doc-category-title {
-  border-bottom: 1px solid #181a1f;
-  color: #cacdd3;
-}
-
-.graphiql-container .field-name {
-  color: #9ca3ac;
-}
-
-.graphiql-container .type-name {
-  color: #95be76;
-}
-
-.cm-property {
-  color: #a5acb8;
-}
-
-.cm-punctuation {
-  color: #acacac;
-}
-
-.cm-ws {
-  color: #acacac;
-}
-
-.graphiql-container div.CodeMirror span.CodeMirror-matchingbracket {
-  color: #acacac;
-  text-decoration: underline;
-}
-
-.cm-string {
-  color: #97be7b;
-}
-
-.cm-variable {
-  color: #a87f5b;
-}
-
-.cm-attribute {
-  color: #b58860;
-}
-
-.cm-def {
-  color: #cc3932;
-}
-
-.cm-keyword {
-  color: #7cf3ff;
-}
-
-.graphiql-container .keyword {
-  color: #9ea5b0;
-}
-
-.graphiql-container .arg-name {
-  color: #b5875d;
-}
-
-.graphiql-container .doc-category-item {
-  color: #bc6069;
-}
-
-a {
-  color: #7b9ad4;
-}
-
-.CodeMirror-lint-tooltip {
-  background: #1a1e22 !important;
-  color: #acacac !important;
-}
-
-.graphiql-container .doc-explorer-title-bar {
+.graphiql-container ::-webkit-scrollbar-corner {
   background: #21262b;
+}
+
+/* Query editor dark theme */
+.graphiql-container .query-editor .CodeMirror {
+  background: #282d34 !important;
+}
+
+.graphiql-container .variable-editor .CodeMirror {
+  background: #282d34 !important;
+}
+
+.graphiql-container .result-window .CodeMirror {
+  background: #282d34 !important;
+}
+
+/* Explorer dark theme */
+.graphiql-container .graphiql-explorer-root {
+  background: #21262b !important;
+  color: #cacdd3 !important;
+}
+
+.graphiql-container .graphiql-explorer-root ::-webkit-scrollbar {
+  width: 12px;
+}
+
+.graphiql-container .graphiql-explorer-root ::-webkit-scrollbar-track {
+  background: #21262b;
+}
+
+.graphiql-container .graphiql-explorer-root ::-webkit-scrollbar-thumb {
+  background: #4a5058;
+  border-radius: 6px;
+}
+
+.graphiql-container .graphiql-explorer-root ::-webkit-scrollbar-thumb:hover {
+  background: #5a6068;
 }
