--- a/src/components/App/custom.css
+++ b/src/components/App/custom.css
@@ -23,7 +23,7 @@ body {
   float: right;
   margin: 10px;
   color: #2e6c8b;
-  font-weight: 600;
+  font-weight: 200;
 }
 
 .logo {
@@ -35,7 +35,7 @@ body {
   height: 48px;
 }
 div.toolbar > .toolbar-button {
-  font-weight: 400;
+  font-weight: 200;
   padding: 2px 11px 2px 11px;
 }
 .toolbar-menu-items > li {
@@ -135,4 +135,8 @@ div.toolbar > .toolbar-button {
 
 .App.graphiql-container > .graphiql-container {
   flex: 1;
+}
+
+.graphiql-session-header-right div {
+  font-weight: 100;
 }
