--- a/src/components/App/CustomDropdown.module.css
+++ b/src/components/App/CustomDropdown.module.css
@@ -9,7 +9,8 @@
   font-size: 14px;
   font-family: inherit;
   cursor: pointer;
-  max-width: 80px;
+  min-width: 110px;
+  max-width: 180px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -43,3 +44,4 @@
   color: #007bff;
   font-size: 14px;
 }
+
