--- a/src/darktheme.css
+++ b/src/darktheme.css
@@ -26,6 +26,114 @@ body.dark-theme .cm-comment {
   color: #7f848e !important;
 }
 
+/* CodeMirror syntax highlighting for dark theme */
+body.dark-theme .cm-keyword {
+  color: #c678dd !important;
+}
+
+body.dark-theme .cm-string {
+  color: #98c379 !important;
+}
+
+body.dark-theme .cm-number {
+  color: #d19a66 !important;
+}
+
+body.dark-theme .cm-atom {
+  color: #d19a66 !important;
+}
+
+body.dark-theme .cm-def {
+  color: #61afef !important;
+}
+
+body.dark-theme .cm-variable {
+  color: #e06c75 !important;
+}
+
+body.dark-theme .cm-variable-2 {
+  color: #56b6c2 !important;
+}
+
+body.dark-theme .cm-variable-3 {
+  color: #c678dd !important;
+}
+
+body.dark-theme .cm-property {
+  color: #56b6c2 !important;
+}
+
+body.dark-theme .cm-operator {
+  color: #abb2bf !important;
+}
+
+body.dark-theme .cm-bracket {
+  color: #abb2bf !important;
+}
+
+body.dark-theme .cm-punctuation {
+  color: #abb2bf !important;
+}
+
+body.dark-theme .cm-meta {
+  color: #be5046 !important;
+}
+
+body.dark-theme .cm-builtin {
+  color: #e06c75 !important;
+}
+
+body.dark-theme .cm-tag {
+  color: #e06c75 !important;
+}
+
+body.dark-theme .cm-attribute {
+  color: #d19a66 !important;
+}
+
+body.dark-theme .cm-qualifier {
+  color: #d19a66 !important;
+}
+
+body.dark-theme .cm-error {
+  color: #f44747 !important;
+  background: none !important;
+}
+
+body.dark-theme .cm-header {
+  color: #e06c75 !important;
+}
+
+body.dark-theme .cm-quote {
+  color: #98c379 !important;
+}
+
+body.dark-theme .cm-hr {
+  color: #abb2bf !important;
+}
+
+body.dark-theme .cm-link {
+  color: #61afef !important;
+}
+
+body.dark-theme .cm-negative {
+  color: #f44747 !important;
+}
+
+body.dark-theme .cm-positive {
+  color: #98c379 !important;
+}
+
+body.dark-theme .cm-strong {
+  color: #d19a66 !important;
+  font-weight: bold;
+}
+
+body.dark-theme .cm-em {
+  color: #c678dd !important;
+  font-style: italic;
+}
+
 /* Scrollbars */
 body.dark-theme .CodeMirror-scrollbar-filler,
 body.dark-theme .CodeMirror-gutter-filler {
